# simwar6

./: .gitignore  Cargo.toml
raito/: Cargo.toml  build.rs
raito/src/: builder.rs  context.rs  lib.rs
raito/src/artist/: mod.rs
raito/src/gl/: context.rs  main.rs  mod.rs
raito/src/sdl/: context.rs  event.rs  gl.rs  init.rs  mod.rs  window.rs
somme/src/unit/: loadout.rs
soyo/: Cargo.toml
soyo/src/: demo.rs  lib.rs
soyo/src/backend/: mod.rs  raito.rs
soyo/src/gfx/: backend.rs  buffer.rs  color.rs  context.rs  event.rs  frame_buffer.rs  letter.rs  mod.rs  rect.rs  slot.rs
soyo/src/mvc/: app.rs  control.rs  flow.rs  launcher.rs  mod.rs  model.rs  view.rs
soyo/src/raito/: backend.rs  event.rs  gfx.rs  mod.rs  slot.rs
soyo/src/tui/: backend.rs  context.rs  frame_buffer.rs  letter.rs
soyo/src/util/: align.rs  latch.rs  mod.rs
soyo/src/view/: common.rs  compose.rs  mod.rs  render.rs  symbol.rs  visitor.rs
soyo/src/widget/: label.rs  mod.rs
src/: launcher.rs  main.rs
src/app/: mod.rs
src/app/battle/: event.rs  mod.rs  model.rs  trigger.rs  view.rs
src/app/menu/: control.rs  event.rs  mod.rs  model.rs  view.rs
src/app/test/: control.rs  event.rs  model.rs  view.rs
src/app/ubmp/: control.rs  event.rs  mod.rs  model.rs  view.rs
src/screen/menu/: handle.rs  mod.rs  widget.rs
src/simwar/: mod.rs
src/simwar/ai/: mod.rs  tester.rs
src/usym/: hbox.rs
src/util/: mod.rs  rand.rs  timer.rs
src/util/math/: mod.rs  scale.rs
src/widget/: menu.rs  mod.rs  utable.rs
src/widget/list/: handle.rs  mod.rs  widget.rs
src/widget/menu/: ctrl.rs  (+2 more)
(+73 files in other folders)
