[package]
name = "simwars5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unic-ucd-category = "0.9.0"
unicode-bidi = "0.3.8"
unicode-width = "0.1.9"
backtrace = "0.3.65"
crossterm = "0.23.1"
rand_xoshiro = "0.6.0"
rand = "0.8.5"

soyo = { path = "soyo" }
somme = { path = "somme" }
raito = { path = "raito" }
